<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.planbg.c3s2_deber.Actividad1">

    <LinearLayout
        android:id="@+id/area_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

            <EditText
                android:id="@+id/edit_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txtNombreCompleto"
                android:inputType="text"
                android:singleLine="true"
                android:text=" "/>
        </android.support.design.widget.TextInputLayout>

        <DatePicker
            android:id="@+id/dpResult"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:paddingLeft="@dimen/activity_datePickerMargen"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

            <EditText
                android:id="@+id/edit_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txtTelefono"
                android:inputType="phone"
                android:singleLine="true"
                android:text=" "/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txtEMail"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:text=" "/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/til_descrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp">

                <EditText
                    android:id="@+id/edit_descrip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txtDescripcion"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text=" "/>
            </android.support.design.widget.TextInputLayout>



            <Button
                android:id="@+id/boton_siguiente"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/txtSiguiente"
                android:textColor="@android:color/white" />
    </LinearLayout>


</RelativeLayout>
